@@ -21,11 +21,10 @@ import fnmatch
 from zope import component
 from zope import interface
 from zope.browserresource import directory
-from zope.browserresource.file import FileResourceFactory
 from zope.browserresource.interfaces import IResourceFactoryFactory
 from zope.pagetemplate import pagetemplate, pagetemplatefile
 from zope.pagetemplate.engine import TrustedAppPT
-from zope.ptresource.ptresource import PageTemplateResourceFactory 
+from zope.ptresource.ptresource import PageTemplateResourceFactory
 from zope.publisher.browser import BrowserPage
 from zope.publisher.interfaces import NotFound
 from zope.publisher.publish import mapply
@@ -38,10 +37,11 @@ class ViewSupport(object):
     """Mixin class providing methods and properties generally
     useful for view-ish components.
     """
+
     @property
     def response(self):
         return self.request.response
-    
+
     @property
     def body(self):
         return self.request.bodyStream.getCacheStream().read()
@@ -68,7 +68,7 @@ class ViewSupport(object):
         elif name is not None and obj is None:
             # create URL to view on context
             obj = self.context
-            
+
         return util.url(self.request, obj, name, data)
 
 
@@ -83,8 +83,7 @@ class View(ViewSupport, BrowserPage):
             self.static = component.queryAdapter(
                 self.request,
                 interface.Interface,
-                name=self.module_info.package_dotted_name
-                )
+                name=self.module_info.package_dotted_name)
         else:
             self.static = None
 
@@ -127,7 +126,7 @@ class View(ViewSupport, BrowserPage):
                       "View %r, macro %s" % (self, key),
                       DeprecationWarning, 1)
         return value
-    
+
     def update(self, **kwargs):
         pass
 
@@ -139,6 +138,7 @@ class View(ViewSupport, BrowserPage):
 # backwards compatibility. Probably not needed by many, but just in case.
 # please start using grokcore.view.View again.
 CodeView = View
+
 
 class BaseTemplate(object):
     """Any sort of page template"""
@@ -231,6 +231,7 @@ class PageTemplate(GrokTemplate):
         self._template = TrustedFilePageTemplate(filename, _prefix)
 
     def _initFactory(self, factory):
+
         def _get_macros(self):
             return self.template._template.macros
         # _template.macros is a property that does template reloading in debug
@@ -247,6 +248,7 @@ class PageTemplate(GrokTemplate):
 
 class PageTemplateFile(PageTemplate):
     # For BBB
+
     def __init__(self, filename, _prefix=None):
         self.__grok_module__ = martian.util.caller_module()
         if _prefix is None:
@@ -257,9 +259,10 @@ class PageTemplateFile(PageTemplate):
 
 _marker = object()
 
+
 class DirectoryResource(directory.DirectoryResource):
     forbidden_names = ('.svn', )
-    
+
     def get(self, name, default=_marker):
 
         for pat in self.forbidden_names:
@@ -268,7 +271,7 @@ class DirectoryResource(directory.DirectoryResource):
                     raise NotFound(None, name)
                 else:
                     return default
-        
+
         path = self.context.path
         filename = os.path.join(path, name)
         isfile = os.path.isfile(filename)
