@@ -3,17 +3,31 @@
    xmlns:grok="http://namespaces.zope.org/grok"
    xmlns:browser="http://namespaces.zope.org/browser"
    i18n_domain="grokcore.view"
-   package="grokcore.view"
-   >
+   package="grokcore.view">
 
-  <include package="zope.app.zcmlfiles" file="meta.zcml" />
+  <include package="zope.component" file="meta.zcml" />
+  <include package="zope.security" file="meta.zcml" />
   <include package="zope.securitypolicy" file="meta.zcml" />
+  <include package="zope.principalregistry" file="meta.zcml" />
+  <include package="zope.publisher" file="meta.zcml" />
+  <include package="zope.browserpage" file="meta.zcml" />
+  <include package="zope.app.publication" file="meta.zcml" />
   <include package="grokcore.view" file="meta.zcml" />
-
-  <include package="zope.app.zcmlfiles" />
-  <include package="zope.app.authentication" />
-  <include package="grokcore.view" />
+  
+  <include package="zope.security" />
+  <include package="zope.principalregistry" />
   <include package="zope.login" />
+  <include package="zope.password" />
+  <include package="zope.site" />
+  <include package="zope.container" />
+  <include package="zope.publisher" />
+  <include package="zope.traversing" />
+  <include package="zope.browserresource" />
+  <include package="zope.traversing.browser" />
+  <include package="zope.app.appsetup" />
+  <include package="zope.app.publication" />
+
+  <include package="grokcore.view" />
   <grok:grok package="grokcore.view.ftests" />
 
   <securityPolicy
