@@ -27,8 +27,10 @@ A view protected with 'zope.Public' is always accessible:
 import grokcore.view as grok
 import zope.interface
 
+
 class ViewPainting(grok.Permission):
     grok.name('cave.ViewPainting')
+
 
 class Painting(grok.View):
     grok.context(zope.interface.Interface)
@@ -36,6 +38,7 @@ class Painting(grok.View):
 
     def render(self):
         return 'What a beautiful painting.'
+
 
 class PublicNudity(grok.View):
     grok.context(zope.interface.Interface)
