@@ -18,6 +18,7 @@ import grokcore.view
 from zope.configuration.config import ConfigurationMachine
 from grokcore.component import zcml
 
+
 def grok(module_name):
     config = ConfigurationMachine()
     zcml.do_grok('grokcore.component.meta', config)
@@ -27,7 +28,10 @@ def grok(module_name):
     zcml.do_grok(module_name, config)
     config.execute_actions()
 
+
 lastwarning = '' # Here we collect warnings.
+
+
 def warn(message, category=None, stacklevel=1):
     """Intended to replace warnings.warn in tests.
 
@@ -50,7 +54,7 @@ def warn(message, category=None, stacklevel=1):
     for i in range(lineno):
         line = file.readline()
 
-    warning ="%s:%s: %s: %s\n  %s" % (
+    warning = "%s:%s: %s: %s\n  %s" % (
         path,
         frame.f_lineno,
         category.__name__,
